# gnu_katana

./: .eproject  .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  README  apache_test  apache_test.sh  config.h.in  configure  configure.ac  info_for_sergey.txt  notes  patch_unit_tests  run_dwarf_tests.sh  run_tests.py  setcap_katana.sh  validator.py
code_tests/: .gitignore  (+2 more)
katana/: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  apache_test  configure  configure.ac  patch_unit_tests  run_tests.py  tar-excludes  validator.py
katana/code_tests/: .gitignore  Makefile  Makefile.am  Makefile.in  README
katana/doc/: Makefile.in  katana.html  katana.org  katana.txt
katana/real_tests/apache/: README  diff-excludes
katana/src/: Makefile.am  Makefile.in  arch.h  config.c  constants.h  dwarf_instr.c  dwarf_instr.h  dwarftypes.c  dwarftypes.h  dwarfvm.c  dwarfvm.h  elfparse.c  elfparse.h  fderead.c  fderead.h  hotpatch.c  katana-prelim.c  katana.c  register.c  register.h  relocation.c  relocation.h  symbol.c  symbol.h  target.c  target.h  types.c  types.h  util.h
katana/src/info/: dwinfo_dump.c  dwinfo_dump.h  fdedump.c  fdedump.h  unsafe_funcs_dump.c  unsafe_funcs_dump.h
katana/src/patcher/: dwarfvm.c  fderead.h  hotpatch.c  hotpatch.h  linkmap.h  patchapply.c  patchapply.h  patchread.h  pmap.c  pmap.h  safety.c  safety.h  target.c  target.h  versioning.c  versioning.h
katana/src/patchwrite/: codediff.c  codediff.h  elfcmp.c  elfcmp.h  elfwriter.c  elfwriter.h  patchwrite.c  patchwrite.h  sourcetree.c  sourcetree.h  typediff.c  typediff.h  write_to_dwarf.c  write_to_dwarf.h
katana/src/util/: dictionary.c  dictionary.h  hash.h  list.c  list.h  logging.c  logging.h  map.c  path.c  path.h  refcounted.c  refcounted.h  util.c  util.h
katana/tests/: Makefile  Makefile.am  Makefile_vars
katana/tests/_test2_nested_types/v0/: Makefile
katana/tests/_test2_nested_types/v1/: Makefile
katana/tests/_test3_multiple_cu/v0/: Makefile  dump  main.c  test
katana/tests/_test3_multiple_cu/v1/: main.c  other.c
katana/tests/t1_basic/: Makefile  Makefile.in  validate.py
katana/tests/t1_basic/v0/: Makefile  Makefile.in  main.c
katana/tests/t1_basic/v1/: Makefile  Makefile.in  main.c
katana/tests/t2_nested_types/: Makefile  Makefile.in  validate.py
katana/tests/t2_nested_types/v0/: Makefile.in  main.c
katana/tests/t2_nested_types/v1/: Makefile  Makefile.in  main.c
katana/tests/t3_multiple_cu/: Makefile  Makefile.in  validate.py
katana/tests/t3_multiple_cu/v0/: Makefile.in  main.c  other.c
katana/tests/t3_multiple_cu/v1/: Makefile.in  main.c  other.c
katana/tests/t4_new_var/: Makefile  Makefile.in  validate.py
katana/tests/t4_new_var/v0/: Makefile.in
katana/tests/t4_new_var/v1/: Makefile  Makefile.in  other.c
katana/tests/t5_pointers/: Makefile.in  validate.py
katana/tests/t5_pointers/v0/: Makefile.in  main.c
katana/tests/t5_pointers/v1/: Makefile.in  main.c
katana/tests/t6_unions/v1/: main.c
katana/tests/t6_unions_enums/: Makefile  Makefile.in  validate.py
katana/tests/t6_unions_enums/v0/: Makefile.in  main.c
katana/tests/t6_unions_enums/v1/: Makefile  Makefile.in  main.c
katana/tests/t7_const/: Makefile.in
katana/tests/t7_const/v0/: Makefile  Makefile.in  main.c
katana/tests/t7_const/v1/: Makefile  Makefile.in
katana/tests/test1_basic/: Makefile  katana_err_log  log  validate.py
katana/tests/test1_basic/v0/: Makefile  dump  dumpf  main.c  test
katana/tests/test1_basic/v1/: main.c  test
katana/tests/test2_nested_types/v0/: main.c
katana/tests/test3_multiple_cu/: validate.py
katana/tests/test3_multiple_cu/v0/: Makefile  main.c
katana/tests/test3_multiple_cu/v1/: Makefile  other.c
katana/tests/test4_new_var/v0/: other.c
katana/tests/test4_new_var/v1/: main.c
src/: .gitignore  Makefile.am  Makefile.in  arch.h  callFrameInfo.c  callFrameInfo.h  commandLine.c  config.c  config.h  constants.h  dictionary.h  dwarf_instr.c  dwarf_instr.h  dwarftypes.c  dwarftypes.h  dwarfvm.c  dwarfvm.h  eh_pe.c  eh_pe.h  elfparse.c  elfparse.h  elfutil.c  elfutil.h  elfwriter.c  elfwriter.h  exceptTable.c  fderead.c  fderead.h  fdewrite.c  fdewrite.h  katana-prelim.c  katana-prelim.h  katana.c  katana_config.c  katana_config.h  leb.c  leb.h  libdwarf_inc.h  map.h  register.c  (+10 more)
src/info/: dwinfo_dump.c  dwinfo_dump.h  fdedump.c  fdedump.h  unsafe_funcs_dump.c  unsafe_funcs_dump.h
src/patcher/: fderead.c  hotpatch.c  hotpatch.h  linkmap.c  linkmap.h  patchapply.c  patchapply.h  patchread.c  pmap.c  pmap.h  safety.c  safety.h  target.c  target.h  versioning.c  versioning.h
src/patchwrite/: codediff.c  codediff.h  elfcmp.c  elfcmp.h  elfwriter.c  elfwriter.h  patchwrite.c  patchwrite.h  sourcetree.c  sourcetree.h  typediff.c  typediff.h  write_to_dwarf.c  write_to_dwarf.h
src/rewriter/: rewrite.c  rewrite.h
src/shell/: .gitignore  Makefile.am  Makefile.in  arrayAccessParam.cpp  arrayAccessParam.h  param.cpp  param.h  parse_helper.h  refCounted.h  shell.cpp  shell.h  shell.l  shell.y  variable.cpp  variable.h
src/shell/commands/: command.cpp  command.h  dwarfscriptCommand.cpp  dwarfscriptCommand.h  extractCommand.cpp  extractCommand.h  hashCommand.cpp  hashCommand.h  infoCommand.cpp  infoCommand.h  loadCommand.cpp  loadCommand.h  patchCommand.cpp  patchCommand.h  replaceCommand.cpp  replaceCommand.h  saveCommand.cpp  saveCommand.h  shellCommand.cpp  shellCommand.h
src/shell/dwarfscript/: .gitignore  Makefile.am  Makefile.in  dwarfscript.l  dwarfscript.y  parse_helper.h
src/shell/variableTypes/: arrayData.cpp  arrayData.h  elfSectionData.cpp  elfSectionData.h  elfVariableData.cpp  elfVariableData.h  rawVariableData.cpp  rawVariableData.h  stringData.cpp  stringData.h
src/util/: cxxutil.cpp  cxxutil.h  dictionary.c  dictionary.h  file.c  file.h  growingBuffer.c  growingBuffer.h  hash.c  hash.h  list.c  list.h  logging.c  logging.h  map.c  map.h  path.c  path.h  refcounted.c  refcounted.h  stack.c  stack.h  util.c  util.h
tests/code/: .gitignore  Makefile.am  Makefile.in  lebtest.c  listsort.c
(+243 files in other folders)
